creusot/tests/should_fail/prusti/adt/same_pair.stderr
error[creusot]: function was supposed to return data with home/lifetime `'a` but it is returning data with home/lifetime `{'a|'b}`
 --> same_pair.rs:9:5
  |
9 |     SamePair(x, y)
  |     ^^^^^^^^^^^^^^

error: aborting due to previous error

